namespace WorldBuilderVR.Editors.Models
{
    /// <summary>
    /// All the different model categories, that a model can have.
    /// </summary>
    public enum CategoryType
    {
        NotCategorized = 0,
        Classic = 1,
        Historical = 2,
        Modern = 3,
        Kitchen = 4,
        Bathroom = 5,
    }
}